# anon2

./: LICENSE  README.md
lattice/: CMakeLists.txt  commitment.cpp  commitment.h  encoded_poly.h  main.cpp  matrix.h  params.h  poly.h  prg.h  randomness.h  sampling.h
lattice/circuit/: bit_gadgets.h  r1cs.h  sha256.h  sha512.h  small_512.h
lattice/fiat_shamir/: transcript.cpp  transcript.h
lattice/piop/: piop.cpp  piop.h  piop_state.h
